--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,8 +1,9 @@
 <h1>メソッドを新規に追加</h1>
 
 <%= form_for Function.new, :url => {:action => 'create'} do |f| %>
-	name:<%= f.text_field :names %><br>
-	data:<%= f.text_area :data %><br>
+	言語:<%= select :languages, [["C", "C"], ["C++", "C++"], ["C#", "C#"],["Java", "Java"], ["Ruby", "Ruby"], ["PHP", "PHP"], ["Python", "Pythonthon"], ["Objective-C", "Objective-C"]] %>
+	名前:<%= f.text_field :names %><br>
+	メソッド:<%= f.text_area :data %><br>
 	説明:<%= f.text_area :descriptions %><br>
 	引数:<%= f.text_field :arguments %><br>
 	戻り値:<%= f.text_field :return_values %><br>
