--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,13 +1,13 @@
 <h1>メソッドを新規に追加</h1>
 
-<%= form_for Function.new, :url => {:action => 'create'} do |f| %>
-	言語:<%= select :languages, [["C", "C"], ["C++", "C++"], ["C#", "C#"],["Java", "Java"], ["Ruby", "Ruby"], ["PHP", "PHP"], ["Python", "Pythonthon"], ["Objective-C", "Objective-C"]] %>
-	名前:<%= f.text_field :names %><br>
-	メソッド:<%= f.text_area :data %><br>
-	説明:<%= f.text_area :descriptions %><br>
-	引数:<%= f.text_field :arguments %><br>
-	戻り値:<%= f.text_field :return_values %><br>
-	tag:<%= f.text_field :tags %><br>
-	<%= f.submit "登録"%>
+<%= form_tag('create', :method => :post) do%>
+	言語:<%= select_tag 'languages', options_for_select([["C", "C"], ["C++", "C++"], ["C#", "C#"],["Java", "Java"], ["Ruby", "Ruby"], ["PHP", "PHP"], ["Python", "Python"], ["Objective-C", "Objective-C"]]) %><br>
+	名前:<%= text_field_tag("names") %><br>
+	メソッド:<%= text_area_tag("data") %><br>
+	説明:<%= text_area_tag ("descriptions") %><br>
+	引数:<%= text_field_tag ("arguments") %><br>
+	戻り値:<%= text_field_tag ("return_values") %><br>
+	tag:<%= text_field_tag ("tags") %><br>
+	<%= submit_tag "登録"%>
 <% end %>
   
