--- a/app/views/home/search_result.html.erb
+++ b/app/views/home/search_result.html.erb
@@ -9,7 +9,7 @@
 		<th>更新時間</th>
 	</tr>
 </thead>
-<% @search_result.each do |index| %>
+<% @result.each do |index| %>
 	<tbody>
 	<tr>
 		<td><%= index.id %></td>
