--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,6 +1,30 @@
 <h1>検索</h1>
 
-<%= form_tag('search_result',:method => :post) do %>
-  言語：<%= select_tag 'languages', options_for_select([["C", "C"], ["C++", "C++"], ["C#", "C#"],["Java", "Java"], ["Ruby", "Ruby"], ["PHP", "PHP"], ["Python", "Python"], ["Objective-C", "Objective-C"]]) %><br>
-  <%= submit_tag "search" %>
+<%= search_form_for @search do |f| %>
+  <div class="field">
+    <%= f.label :names_cont, "Names contains" %>
+    <%= f.text_field :names_cont %>
+  </div>
+  <div class="actions"><%= f.submit "Search" %></div>
 <% end %>
+
+<table border="1">
+<thead>
+	<tr>
+		<th>ID</th>
+		<th>言語</th>
+		<th>メソッド名</th>	
+		<th>更新時間</th>
+	</tr>
+</thead>
+<% @result.each do |index| %>
+	<tbody>
+	<tr>
+		<td><%= index.id %></td>
+		<td><%= index.languages %></td>
+		<td><%= index.names %></td>
+		<td><%= index.updated_at.strftime("%m月%d日 %H時%M分") %></td>
+	</tr>
+	</tbody>
+<% end %>
+</table>
