--- a/app/views/functions/index.html.erb
+++ b/app/views/functions/index.html.erb
@@ -2,8 +2,8 @@
 <p>関娘をドックに集めましょう</p>
 
 <p>
-<%= link_to '新規メソッド追加', 'home/new' %>
-<%= link_to '検索', 'home/search' %>
+<%= link_to '新規メソッド追加', 'functions/new' %>
+<%= link_to '検索', 'functions/search' %>
 </p>
 <table border="1">
 <thead>
