detailのdataを改行ありにした

--- a/app/views/functions/detail.html.erb
+++ b/app/views/functions/detail.html.erb
@@ -22,7 +22,7 @@
  		<td><%= @detail.return_values %></td>
 		<td><%= @detail.updated_at.strftime("%m月%d日 %H時%M分") %></td>
 		<td><%= @detail.descriptions %></td>
-		<td><%= @detail.data %></td>
+		<td><%= simple_format(@detail.data) %></td>
 	</tr>
 	</tbody>
 </table>
